--- a/src/frontend/online-book-store/package.json
+++ b/src/frontend/online-book-store/package.json
@@ -16,7 +16,6 @@
         "customize-cra": "^1.0.0",
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
-        "react-app-rewired": "^2.2.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
@@ -48,6 +47,7 @@
         ]
     },
     "devDependencies": {
-        "babel-plugin-module-resolver": "^5.0.2"
+        "babel-plugin-module-resolver": "^5.0.2",
+        "react-app-rewired": "^2.2.1"
     }
 }
