--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,24 +1,12 @@
 numpy==1.26.3
-insightface==0.7.3
-face_recognition==1.3.0
-opencv-python==4.9.0.80
-sqlmodel==0.0.14 
 psycopg2==2.9.9
-insightface==0.7.3
-plotly==5.18.0
-scikit-learn==1.4.0
-pandas==2.2.0
-streamlit==1.31.0
-deepface==0.0.84
-pillow==10.2.0
-sentence-transformers==2.3.1
-SQLAlchemy==2.0.25
+SQLAlchemy== 2.0.30
 pyvi==0.1.1
 fastapi== 0.111.0
-uvicorn==0.27.0.post1
-pydantic==2.6.1
+uvicorn==0.29.0
+pydantic==2.7.1
 requests==2.31.0
-fastapi-jwt==0.2.0
+fastapi-jwt==0.3.0
 fastapi-jwt-auth2==0.5.0
 fastapi-jwt-auth==0.5.
 python-dotenv==1.0.1
