--- a/src/frontend/online-book-store/package.json
+++ b/src/frontend/online-book-store/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.2.1",
+        "@react-oauth/google": "^0.12.1",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -19,7 +20,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "sass": "^1.77.2",
         "web-vitals": "^2.1.4"
     },
