--- a/src/backend/.env
+++ b/src/backend/.env
@@ -9,7 +9,7 @@ DB_PASSWORD = C2GqdfOZ5Aob
 DB_HOST = ep-soft-leaf-a1tnjnif.ap-southeast-1.aws.neon.tech
 # DB_USER = postgres
 # DB_PASSWORD = 123456
-DB_HOST = localhost
+#DB_HOST = localhost
 DB_PORT = 5432
 
 # --JWT CONFIGURATION--
