--- a/src/backend/.env
+++ b/src/backend/.env
@@ -8,7 +8,7 @@ MAIL_PASSWORD_APP = alwl clry vtxx uewa
 # DB_PASSWORD = C2GqdfOZ5Aob
 # DB_HOST = ep-soft-leaf-a1tnjnif.ap-southeast-1.aws.neon.tech
 # DB_USER = postgres
-# DB_PASSWORD = 123456
+# DB_PASSWORD = pgtungthai19
 # DB_HOST = localhost
 # DB_PORT = 5432
 DB_NAME = defaultdb
@@ -23,6 +23,8 @@ REFESH_TOKEN_EXPIRE_DAYS=7
 SECRET_KEY = 4605MdCnG_DO6hVWefenXUy-7JmuPCMYKnrWA5pVZh4
 ALGORITHM = HS256 
 
+# --Photo Directory --
+Photo_directory = "app/database/photo"
 
 #AWS
 AWS_ACCESS_KEY_ID="AKIAQKPILYECQCCLGQJB"
