--- a/src/frontend/online-book-store/package.json
+++ b/src/frontend/online-book-store/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.7.2",
         "classnames": "^2.5.1",
         "customize-cra": "^1.0.0",
+        "js-cookie": "^3.0.5",
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
