--- a/src/frontend/admin-online-book-store/package.json
+++ b/src/frontend/admin-online-book-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-online-book-store",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -20,13 +20,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "classnames": "^2.5.1",
     "customize-cra": "^1.0.0",
+    "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
+    "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.2",
     "web-vitals": "^2.1.4"
   },
@@ -57,5 +61,10 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2",
     "react-app-rewired": "^2.2.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "config-overrides.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
