Add filter rate

--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,6 +1,6 @@
 # --EMAIL CONFIGURATION--
 MAIL_SENDER = sibooki2se@gmail.com
-MAIL_PASSWORD_APP = alwl clry vtxx uewa
+MAIL_PASSWORD_APP = qins dzuv pcna nqgh
 # --DATABASE CONFIGURATION--
 
 # DB_NAME = Online_Book_Store
