--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@emailjs/browser": "^4.4.1",
     "jwt-decode": "^4.0.0",
     "react-cookie": "^7.2.0",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
     "universal-cookie": "^7.2.0"
   }
 }
