--- a/src/frontend/admin-online-book-store/package.json
+++ b/src/frontend/admin-online-book-store/package.json
@@ -24,17 +24,19 @@
     "classnames": "^2.5.1",
     "customize-cra": "^1.0.0",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.2",
+    "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {  
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
