--- a/src/frontend/online-book-store/package.json
+++ b/src/frontend/online-book-store/package.json
@@ -25,11 +25,12 @@
         "react-router-dom": "^6.23.1",
         "react-scripts": "^5.0.1",
         "sass": "^1.77.2",
+        "serve": "^14.2.3",
         "universal-cookie": "^7.2.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-app-rewired start",
+        "start": "serve -s build -l $PORT",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject"
